issue: resolved issue with safari image border and overflow

--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -25,6 +25,7 @@
   width: auto;
   border-radius: 50%;
   border: 3px solid #fff;
+  z-index: 2;
 }
 
 .profile-card-body {
